# minorcurvature

./: CMakeLists.txt  README.md  graph_writing.cxx  lesscurve.cxx
blossom5-v2.05.src/: PMimplementation.h
data/: bandito.stl  brachbit.stl  longtube.stl  twisttube.stl
